# kisstdlib

./: .gitignore  CHANGELOG.md  README.md  default.nix  mypy.ini  pyproject.toml  sanity.sh  test-example.sh  update-changelog.sh  update-readme.sh
devscript/: test-cli-lib.sh
example/: fs_iter_subtree.py  fs_walk_orderly.py  os_walk_orderly.py  sqlite3_ext.py  stop_gently.py  tty_io.py
kisstdlib/: __init__.py  argparse_ext.py  base.py  exceptions.py  failure.py  fs.py  itertools_ext.py  logging.py  os.py  path.py  signal_ext.py  sorted.py  sqlite3_ext.py  string_ext.py  tariter.py  time.py  util.py
kisstdlib/argparse/: __init__.py  better.py
kisstdlib/io/: adapter.py  base.py  stdio.py  wrapper.py
kisstdlib/io/encoder/: __init__.py  base.py  pyrepr.py
kisstdlib_bin/: describe_dir.py  describe_forest.py  describe_subtree.py
test/: test_basics.py  test_fs.py  test_io.py  test_sorted.py
