[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "kisstdlib"
version = "0.0.4"
authors = [{ name = "Jan Malakhovski", email = "oxij@oxij.org" }]
description = "Keep It Simple STandarD LIBraries set for Python"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Python Software Foundation License",
]
keywords = [
    "sys",
    "stdlib",
]
requires-python = ">=3.10"
[tool.setuptools.packages.find]
where = ["."]
include = ["kisstdlib*"]
namespaces = true
[tool.setuptools.package-data]
"kisstdlib" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
implicit_reexport = true
explicit_package_bases = true
files = [
    "**/*.py"
]
[[tool.mypy.overrides]]
module = [
    "setuptools",
    "sortedcontainers",
]
ignore_missing_imports = true
